# Trabalho-Mestrado

./: README.md
box_counting/: box.py  (+4 more)
sann/: 1.toml  10.toml  15.toml  5.toml  Cargo.toml  README.md  coord  parameters.toml  plot.py  plot_coord.py  repetidor.py
sann/1/: dados_ext.csv  dados_in.csv  dados_out.csv
sann/10/: dados_ext.csv  dados_in.csv  dados_out.csv
sann/10 _dados/1_1000/: 10.csv  dados_ext.csv  dados_in.csv  dados_out.csv
sann/10 _dados/2_5000/: dados_ext.csv  dados_in.csv
sann/15/: dados_in.csv  dados_out.csv
sann/15_dados/1_1000/: 15.csv  dados_ext.csv  dados_in.csv  dados_out.csv
sann/15_dados/2_5000/: dados_ext.csv
sann/1_dados/1/: 1_in.csv  1_out.csv
sann/1_dados/2/: 1_.csv  1_pt2_ext.csv
sann/1_dados/3/: dados_ext.csv  dados_in.csv  dados_out.csv
sann/5/: 5.csv  dados_out.csv
sann/5 _dados/1_1000/: 5.csv  dados_ext.csv  dados_in.csv
sann/5 _dados/2_5000/: dados_ext.csv  dados_in.csv
sann/??/: dados.csv  dados_ext.csv  dados_in.csv  dados_out.csv
sann/output/5/: dados_ext.csv  dados_in.csv  dados_out.csv
sann/param/: 5.toml
sann/parameters_files/: 00.toml  01.toml
sann/plot/: dados_out.csv  plot_coord.py
sann/src/: linalg_helpers.rs  main.rs  shared_shit.rs  simulated_annealing.rs  simulated_annealing_dumber_and_better.rs  types.rs
sann/src/file_io/: mod.rs  recorders.rs
sann/src/graph/: convex_hull.rs  mod.rs  types.rs
sann/src/my_gui/: draw_mode.rs  mod.rs  run_mode.rs
sann/src/renderer/: consts.rs  draw_mode.rs  junk.rs  mod.rs  types.rs
sann/src/stitcher/: greedy.rs  mod.rs  smart.rs  types.rs
(+25 files in other folders)
