[package]

name = "sars"
version = "0.0.1"
authors = [ "Deco <decomuricy@gmail.com>" ]

[dependencies]
piston = "0.51.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
conrod_piston = "0.73.0"
conrod_core = "0.73.0"
piston_window = "0.113"
find_folder = "0.3.0"
float-cmp = "0.8.0"
rand = "0.7"
toml = "0.5.7"
vec1 = "*"
pathfinding = "^2.1.1"
regex = "1"
num-traits = "0.2"
geo = "*"
csv = "*"
itoa = "0.4"
ryu = "*"
lexical = "*"
quick-xml = "0.31.0"
